<resources>
    <string name="app_name">маяки</string>

    <string name="default_notification_channel_id">markn</string>

    <string name="action_settings">Settings</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>
    <string name="dialog_message">It seems you are not in Telecommunications college.\n Do you want to open the GPS to get there?</string>
    <string name="ble_dialog_message">It seems your device does not have Bluetooth Low Energy. At the moment, you can not use our guidance functionality.</string>
    <string name="wrong_dialog_message">It seems that you are not following the right direction.</string>


    <string name="empty_ribots">There aren\'t any ribots</string>
    <string name="error_loading_ribots">There was a problem loading the ribots</string>

    <!-- Schedules -->
    <string-array name="scheduler_fragment_tabs">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <!-- Guide -->
    <string name="route_to">Route to</string>

    <string name="first_quarter">First half</string>
    <string name="second_quarter">Second half</string>

    <!--main-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="bottom_scheduler">Schedule</string>
    <string name="bottom_professors">Professors</string>
    <string name="bottom_guide">Guide</string>

    <!--login-->
    <string name="text_email">Email address</string>
    <string name="text_password">Password</string>
    <string name="text_forgot_pass">Forgot password?</string>
    <string name="bottom_login">Log in</string>
    <string name="text_create_account">Create account</string>
    <string name="text_guest_session">Continue as guest</string>
    <string name="text_test_session">Test user</string>
    <string name="text_valid_email">Enter a valid email</string>
    <string name="text_pass_required">Password required</string>
    <string name="text_user_no_exist">User does not exist</string>

    <!--signup-->
    <string name="text_username">Last name, Name</string>
    <string name="text_email_signup">Email address</string>
    <string name="text_password_signup">Password</string>
    <string name="bottom_signup">Sign up</string>
    <string name="text_guest_session_signup">Continue as guest</string>
    <string name="name_required">Name required</string>
    <string name="text_student">You are not a student \nof this college?</string>

    <!--menu_navigation-->
    <string name="icon_notifications">Notifications</string>
    <string name="icon_settings">Settings</string>
    <string name="icon_help">Help</string>
    <string name="icon_logout">Log out</string>

    <!--help-->
    <string name="help">Help </string>
    <string name="help_shecule">
        In the schedule window you can see the classes you have each day of the week: the start and end time, the subject and the classroom where it is taught.</string>
    <string name="help_teachers">
        In the professors window you can see a list of the professors of the school, their email, their office and their tutorial schedule. Search them by name. Click on a professor to send an email. </string>
    <string name="help_guide">
        In the guide window you can choose the place you want to go to. A series of indications will appear with photos of the places you must go to reach your destination.</string>
    <string name="help_menu">Menu</string>
    <string name="help_menu_text">
        In the menu you receive notifications about the changes teachers make in your subjects and in their tutorials.</string>

    <!-- Teachers -->
    <string name="email_message_body">\n\n Email sent from маяки.</string>
    <string name="email_message_chooser">Send email using...</string>
    <string name="email_message_error">No email clients installed.</string>

</resources>
