<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme.NoActionBar"
    android:background="@drawable/image_uvigo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="30dp">

        <RelativeLayout
            android:id="@+id/footer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/textview_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:clickable="true"
                android:text="@string/text_create_account"
                android:layout_alignParentLeft="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/textview_guest_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:clickable="true"
                android:text="@string/text_guest_session"
                android:layout_alignParentRight="true"
                android:focusable="true" />

        </RelativeLayout>





        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_above="@+id/footer_layout"
            android:textAllCaps="false"
            android:text="@string/bottom_login"
            android:textSize="12sp"
            android:background="@color/primary"
            />

        <TextView
            android:id="@+id/forgot_password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/login_button"
            android:text="@string/text_forgot_pass"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:clickable="true"
            android:focusable="true"/>

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:gravity="center"
            android:layout_above="@+id/forgot_password_textview"
            android:textSize="12sp"
            android:inputType="textPassword"
            android:hint="@string/text_password"/>

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:gravity="center"
            android:layout_above="@id/password_edittext"
            android:inputType="textEmailAddress"
            android:textSize="12sp"
            android:hint="@string/text_email"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text=" маяки"
            android:textAlignment="center"
            android:textSize="70dp" />

    </RelativeLayout>

</LinearLayout>