<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme.NoActionBar"
    android:background="@drawable/image_uvigo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:id="@+id/footer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:stretchColumns="0,1">
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textAllCaps="false"
                    android:layout_marginRight="5dp"
                    android:text="@string/text_student"
                    />

                <Button
                    android:id="@+id/signup_textview_guest_session"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/white"
                    android:clickable="true"
                    android:textSize="12sp"
                    android:textAllCaps="false"
                    android:text="@string/text_guest_session_signup"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:background="@color/orange"
                    android:focusable="true" />

                </TableRow>
            </TableLayout>
        </LinearLayout>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_above="@+id/footer_layout"
            android:textAllCaps="false"
            android:text="@string/bottom_signup"
            android:textSize="12sp"
            android:background="@color/primary"
            />

        <EditText
            android:id="@+id/signup_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:gravity="center"
            android:layout_above="@+id/signup_button"
            android:inputType="textPassword"
            android:textSize="12sp"
            android:hint="@string/text_password_signup"/>

        <EditText
            android:id="@+id/signup_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:gravity="center"
            android:layout_above="@id/signup_password_edittext"
            android:inputType="textEmailAddress"
            android:textSize="12sp"
            android:hint="@string/text_email_signup"/>

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:gravity="center"
            android:layout_above="@id/signup_email_edittext"
            android:textSize="12sp"
            android:hint="@string/text_username"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text=" маяки"
            android:textAlignment="center"
            android:textSize="70dp" />

    </RelativeLayout>

</LinearLayout>