<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark">

    <TextView
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:text="@string/help" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="90dp"
        android:background="@color/blue_dark"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp">

                <ImageView
                    android:id="@+id/image_schedule_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/borde_redondo"
                    android:src="@drawable/ic_date_range_black_24dp"
                    />
                    <TextView
                        android:id="@+id/help_scheduler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_below="@+id/image_schedule_help"
                        android:text="@string/bottom_scheduler"
                        android:background="@drawable/borde_redondo"
                        android:layout_marginTop="5dp"
                        />
                    <TextView
                        android:id="@+id/text_help_schedule"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/help_scheduler"
                        android:textSize="15dp"
                        android:gravity="center"
                        android:text="@string/help_shecule"
                        android:background="@drawable/borde_redondo"
                        android:layout_marginTop="5dp"
                        />

                    <ImageView
                        android:id="@+id/image_teachers_help"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_centerInParent="true"
                        android:background="@drawable/borde_redondo"
                        android:layout_below="@+id/text_help_schedule"
                        android:src="@drawable/ic_person_black_24dp"
                        android:layout_marginTop="30dp"
                        />
                    <TextView
                        android:id="@+id/help_teachers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/image_teachers_help"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/bottom_professors"
                        android:background="@drawable/borde_redondo"
                        android:layout_marginTop="5dp"

                        />
                    <TextView
                        android:id="@+id/text_help_teachers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/help_teachers"
                        android:textSize="15dp"
                        android:gravity="center"
                        android:text="@string/help_teachers"
                        android:background="@drawable/borde_redondo"
                        android:layout_marginTop="5dp"
                        />
                    <ImageView
                        android:id="@+id/image_guide_help"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_centerInParent="true"
                        android:layout_below="@+id/text_help_teachers"
                        android:background="@drawable/borde_redondo"
                        android:src="@drawable/ic_my_location_black_24dp"
                        android:layout_marginTop="30dp"
                        />
                    <TextView
                        android:id="@+id/help_guide"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/image_guide_help"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/bottom_guide"
                        android:background="@drawable/borde_redondo"
                        android:layout_marginTop="5dp"
                        />
                    <TextView
                        android:id="@+id/text_help_guide"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/help_guide"
                        android:textSize="15dp"
                        android:gravity="center"
                        android:text="@string/help_guide"
                        android:background="@drawable/borde_redondo"
                        android:layout_marginTop="5dp"
                        />
                    <ImageView
                        android:id="@+id/image_menu_help"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_centerVertical="true"
                        android:layout_centerInParent="true"
                        android:layout_below="@+id/text_help_guide"
                        android:src="@drawable/ic_notifications_black_24dp"
                        android:background="@drawable/borde_redondo"
                        />
                    <TextView
                        android:id="@+id/help_menu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/image_menu_help"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/help_menu"
                        android:background="@drawable/borde_redondo"
                        android:layout_marginTop="5dp"
                        />
                    <TextView
                        android:id="@+id/text_help_menu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/help_menu"
                        android:textSize="15dp"
                        android:gravity="center"
                        android:text="@string/help_menu_text"
                        android:background="@drawable/borde_redondo"
                        android:layout_marginTop="5dp"
                        />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>